--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,4 @@ jobs:
         with:
           skip-step: all
           coverage-file: coverage/coverage-final.json
+          base-coverage-file: coverage/coverage-final.json
