--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "TZ=UTC jest --coverage"
+    "tests": "TZ=UTC jest --coverage"
   },
   "keywords": [],
   "author": "",
