--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,9 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test
+        run: npx jest --coverage --coverageReporters json-summary
 
       - name: Jest Coverage Comment
         uses: MishaKav/jest-coverage-comment@main
         with:
-          coverage-summary-path: coverage/coverage-final.json
+          coverage-summary-path: coverage/coverage-summary.json
