--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,17 +26,19 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # - name: Run tests
-      #   run: npm test
+      - name: Run tests
+        run: npm test
+
       # - name: Run tests
       #   run: npx jest --coverage --coverageReporters json-summary
       # - name: Jest Coverage Comment
       #   uses: MishaKav/jest-coverage-comment@main
       #   with:
       #     coverage-summary-path: coverage/coverage-summary.json
+
       - name: Generate and report coverage
         uses: ArtiomTr/jest-coverage-report-action@v2
-        # with:
-        #   skip-step: all
-        #   coverage-file: coverage/coverage-final.json
-        #   base-coverage-file: coverage/coverage-final.json
+        with:
+          skip-step: all
+          coverage-file: coverage/coverage-final.json
+          # base-coverage-file: coverage/coverage-final.json
