--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,5 @@ jobs:
         with:
           skip-step: install
           test-script: TZ=UTC jest --coverage
-          coverage-file: coverage/coverage-final.json
+          # coverage-file: coverage/coverage-final.json
           # base-coverage-file: coverage/coverage-final.json
