--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,6 @@ jobs:
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
           skip-step: install
-          test-script: TZ=UTC jest --coverage
+          test-script: jest --coverage
           # coverage-file: coverage/coverage-final.json
           # base-coverage-file: coverage/coverage-final.json
