--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,13 +28,19 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Test Report
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
+      # - name: Test Report
+      #   uses: dorny/test-reporter@v1
+      #   if: success() || failure()
+      #   with:
+      #     name: Jest Tests
+      #     path: reports/jest-*.xml
+      #     reporter: jest-junit
+
+      - name: Publish coverage report
+        uses: ArtiomTr/jest-coverage-report-action@v1
         with:
-          name: Jest Tests
-          path: reports/jest-*.xml
-          reporter: jest-junit
+          report_path: coverage/lcov-report
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Run tests
       #   run: npm test
