--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "TZ=UTC jest --ci --reporters=default --reporters=jest-junit"
+    "test": "TZ=UTC jest --coverage || true"
   },
   "keywords": [],
   "author": "",
@@ -15,15 +15,5 @@
     "jest-junit": "^16.0.0",
     "ts-jest": "^29.1.5",
     "typescript": "^5.4.5"
-  },
-  "jest-junit": {
-    "outputDirectory": "reports",
-    "outputName": "jest-junit.xml",
-    "ancestorSeparator": " > ",
-    "uniqueOutputName": "false",
-    "suiteNameTemplate": "{filepath}",
-    "classNameTemplate": "{classname}-{title}",
-    "titleTemplate": "{classname}-{title}",
-    "usePathForSuiteName": "true"
   }
 }
